2007-10-23       Gaius Mulley <gaius@gnu.org>

        * gm2/gm2.texi:  more building documentation fixes.
	* gm2/www/index.ms:  updated documentation to reflect
          changes to the gm2.texi building instructions.
	
2007-10-22       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs-pim/BitBlockOps.{def,mod}:  added.
	* gm2/Make-lang.in:  added BitBlockOps to the Logitech list
          of modules.
	* gm2/gm2.texi:  improved building documentation which now
	  relates to the daily CVS snapshot held on
	  http://floppsie.comp.glam.ac.uk/download/c

2007-10-18       Gaius Mulley <gaius@gnu.org>

	* gm2/www/index.ms:  rationalised the building instructions
	  between the web page and gm2/gm2.texi
	* gm2/gm2.texi:  updated the building instructions.

2007-10-14       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  fixed bug in gm2/gm2-libs/gm2-libs-host.h
	  target so that configure uses the correct CC and CPP.

2007-10-09       Gaius Mulley <gaius@gnu.org>

	* gm2/README:  updated to reflect new homepage and mailing
	  list address.

2007-10-07       Gaius Mulley <gaius@gnu.org>

	* fixed bug reported by Dmitry Shatrov <shatrov@gmail.com>
	* gm2/gm2-compiler/M2Quads.mod:  added CheckNotConstAndVar
	  procedure.  BuildAssignment use CheckNotConstAndVar.
	* gm2/testsuite/gm2/pim/fail/constvar.mod:  added new
	  regression test.
	* gm2/gm2.texi:  updated the last update field.

2007-10-05       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  updated version to 0.62
	* gm2/Make-lang.in:  altered all -W options to their new
	  -f counterparts
	* gm2/README:  modified the advised build command
	* gm2/gccgm2.c:  removed all section of code inside #if 0
	  blocks (which were not part of the orig gcc source).
	* gm2/gccgm2.c:  modified OPT_W to OPT_f to reflect change
	  of -W flags to -f flags.
	* gm2/gccgm2.c:  reintroduced the -fcpp handling code.
	* gm2/gm2.texi:  updated version number to 0.62
	* gm2/gm2.texi:  altered all -W options to -f options